# pyscoutfm

./: .gitattributes  .gitignore  MANIFEST.in  PyScoutFM.ipynb  README.md  WINDOWS_INSTALL.md  ratings.json  setup.cfg  setup.py
.github/workflows/: ci-cd.yml  release.yml  test.yml
src/PyScoutFM/: __init__.py  application.py  data.py  formatter.py  generator.py  importer.py
src/PyScoutFM/config/: ratings.json
src/pyscoutfm/: application.py  data.py  formatter.py  generator.py  importer.py
src/pyscoutfm/config/: config.json  weightings.json
src/pyscoutfm1/: application.py  formatter.py
tests/: importer_test.py  integration_test.py
tests/stubs/: config.json  custom_ratings.json  custom_weightings.json
tests/stubs/inputs/: Player Search.html  Squad.html
tests/stubs/inputs/integration/: Squad.html
views/: PyScoutFM - Player Search.fmf  PyScoutFM - Squad.fmf
