[metadata]
name = PyScoutFM
version = attr: PyScoutFM.__version__
author = Oli Morris
author_email = olimorris@users.noreply.github.com
description = Python scouting tool for the Football Manager game
url = https://github.com/olimorris/pyscoutfm
license = MIT

[options]
package_dir=
    =src
install_requires =
    typer >= 0.9.0

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    pyscoutfm = PyScoutFM.application:app
