[metadata]
name = PyScoutFM
version = attr: PyScoutFM.__version__
author = Oli Morris
author_email = olimorris@users.noreply.github.com
description = Use the power of Python to traverse the cosmos and scout for players within the Football Manager game
url = https://github.com/olimorris/pyscoutfm
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
include_package_data = True
python_requires = >=3.8
package_dir=
    =src
install_requires =
    lxml >= 4.9.3
    pandas >= 2.0.0
    rich >= 13.6.0
    typer >= 0.9.0

[options.extras_require]
dev =
    pytest >= 7.4.3

[options.package_data]
extras = *.fmf
* = README.md

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    pyscoutfm = PyScoutFM.application:app
